# simple-secrets.rs

./: Cargo.toml  README.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: afl.rs  roundtrip.rs  simple_secrets.rs  unpack.rs
lib/: Cargo.toml
lib/src/: cipher.rs  encoding.rs  env.rs  error.rs  hmac.rs  lib.rs
src/: error.rs  key.rs  lib.rs  primitives.rs
wasm/: Cargo.toml  README.md
wasm/js/: .gitignore  package.json
wasm/js/src/: index.js  randombytes.browser.js  simple-secrets.test.js
wasm/package/: package.json
wasm/package/src/: index.js  randombytes.node.js
wasm/src/: lib.rs
