[package]
name = "fuzz"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = "0.4"
arbitrary = "0.1"
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }
simple-secrets = { path = "../lib" }
ref_thread_local = "0.0.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "afl"
path = "fuzz_targets/afl.rs"

[[bin]]
name = "unpack"
path = "fuzz_targets/unpack.rs"

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"

[profile.release]
lto = true
